// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action List Sort Utils Default sort 1`] = `
Object {
  "columns": Array [
    Object {
      "canSort": true,
      "children": "ID",
      "id": "id",
      "primaryKey": true,
      "sortDirection": "asc",
      "type": "number",
      "widthPercent": 20,
    },
    Object {
      "canSort": true,
      "children": "Name",
      "id": "name",
      "type": "string",
      "widthPercent": 80,
    },
  ],
  "data": Array [
    Object {
      "id": 1,
      "name": "Shaq",
    },
    Object {
      "id": 2,
      "name": "Kobe",
    },
  ],
}
`;

exports[`Action List Sort Utils Default sort 2`] = `
Object {
  "columns": Array [
    Object {
      "canSort": true,
      "children": "ID",
      "id": "id",
      "primaryKey": true,
      "sortDirection": "desc",
      "type": "number",
      "widthPercent": 20,
    },
    Object {
      "canSort": true,
      "children": "Name",
      "id": "name",
      "type": "string",
      "widthPercent": 80,
    },
  ],
  "data": Array [
    Object {
      "id": 2,
      "name": "Kobe",
    },
    Object {
      "id": 1,
      "name": "Shaq",
    },
  ],
}
`;

exports[`Action List Sort Utils Default sort 3`] = `
Object {
  "columns": Array [
    Object {
      "canSort": true,
      "children": "ID",
      "id": "id",
      "primaryKey": true,
      "type": "number",
      "widthPercent": 20,
    },
    Object {
      "canSort": true,
      "children": "Name",
      "id": "name",
      "sortDirection": "asc",
      "type": "string",
      "widthPercent": 80,
    },
  ],
  "data": Array [
    Object {
      "id": 2,
      "name": "Kobe",
    },
    Object {
      "id": 1,
      "name": "Shaq",
    },
  ],
}
`;

exports[`Action List Sort Utils Default sort 4`] = `
Object {
  "columns": Array [
    Object {
      "canSort": true,
      "children": "ID",
      "id": "id",
      "primaryKey": true,
      "type": "number",
      "widthPercent": 20,
    },
    Object {
      "canSort": true,
      "children": "Name",
      "id": "name",
      "sortDirection": "desc",
      "type": "string",
      "widthPercent": 80,
    },
  ],
  "data": Array [
    Object {
      "id": 1,
      "name": "Shaq",
    },
    Object {
      "id": 2,
      "name": "Kobe",
    },
  ],
}
`;

exports[`Action List Sort Utils Default string comparison 1`] = `-1`;

exports[`Action List Sort Utils Default string comparison 2`] = `0`;

exports[`Action List Sort Utils Default string comparison 3`] = `1`;

exports[`Action List Sort Utils Default string comparison 4`] = `-1`;

exports[`Action List Sort Utils Default string comparison 5`] = `1`;
